Change @Autowired from fields to constructors